latest work added

--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,9 @@
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 /* font related style end */
+
+/* .flex-1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+} */
